Correct InfoPanel z-index

--- a/src/components/InfoPanel/InfoPanel.scss
+++ b/src/components/InfoPanel/InfoPanel.scss
@@ -18,6 +18,7 @@ $tab-size: 64px;
   overflow-y: auto;
   overflow-x: hidden;
   font-size: 10px;
+  z-index: 11;
   ul {
     margin: 0;
     padding: 0 1em;
